--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <img href="camels-in-truck.jpg" alt="The roads of Riyadh">
       <h3>Sources</h3>
       <a href="http://www.lonelyplanet.com/saudi-arabia/riyadh">Lonley Planet</a>
+      <a href="http://en.wikipedia.org/wiki/Riyadh">Wikipedia</a>
     </div>
   </div>
 </body>
